force-app/main/default/objects/Booking__c/fields/Total_To_Divide__c.field-meta.xml
<CustomField>
    <fullName>Total_To_Divide__c</fullName>
    <label>Total To Divide</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>