force-app/main/default/objects/Booking__c/fields/Total_With_Taxswap__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Taxswap__c</fullName>
    <label>Total With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>