force-app/main/default/objects/Booking__c/fields/TPA_Date__c.field-meta.xml
<CustomField>
    <fullName>TPA_Date__c</fullName>
    <label>TPA Date</label>
    <type>Date</type>
</CustomField>