force-app/main/default/objects/Booking__c/fields/UDS__c.field-meta.xml
<CustomField>
    <fullName>UDS__c</fullName>
    <formula>Plot__r.UDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>