force-app/main/default/objects/Booking__c/fields/Undivided_Share_Of_Land__c.field-meta.xml
<CustomField>
    <fullName>Undivided_Share_Of_Land__c</fullName>
    <formula>Plot__r.UDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Undivided Share Of Land</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>