force-app/main/default/objects/Booking__c/fields/Unit_NumberFor__c.field-meta.xml
<CustomField>
    <fullName>Unit_NumberFor__c</fullName>
    <formula>Plot__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>