force-app/main/default/objects/Booking__c/fields/Unit_Specification__c.field-meta.xml
<CustomField>
    <fullName>Unit_Specification__c</fullName>
    <formula>Plot__r.Name +&apos;, &apos;+ TEXT(Plot__r.Built_up_area__c) +&apos; - sqft,&apos;+&apos; &apos;+ TEXT(Plot__r.BHK_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Specification</label>
    <type>Text</type>
</CustomField>