force-app/main/default/objects/Booking__c/fields/Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Unit_Text__c</fullName>
    <label>Unit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>