force-app/main/default/objects/Booking__c/fields/W_o_S_o_C_o__c.field-meta.xml
<CustomField>
    <fullName>W_o_S_o_C_o__c</fullName>
    <label>W/o/S/o/C/o</label>
    <length>255</length>
    <type>Text</type>
</CustomField>