force-app/main/default/objects/Booking__c/fields/Water_Electricity_ChargesSwap__c.field-meta.xml
<CustomField>
    <fullName>Water_Electricity_ChargesSwap__c</fullName>
    <label>Water Electricity Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>