force-app/main/default/objects/Booking__c/fields/Welcome_Mail_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Mail_Checkbox__c</fullName>
    <formula>ISBLANK(Welcome_Mail_Sent_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Mail Checkbox</label>
    <type>Checkbox</type>
</CustomField>