force-app/main/default/objects/Booking__c/fields/West_By__c.field-meta.xml
<CustomField>
    <fullName>West_By__c</fullName>
    <formula>Plot__r.West_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>West By</label>
    <type>Text</type>
</CustomField>