force-app/main/default/objects/Booking__c/recordTypes/Live_inventory.recordType-meta.xml
<RecordType>
    <fullName>Live_inventory</fullName>
    <active>false</active>
    <label>Live inventory</label>
</RecordType>