force-app/main/default/objects/Booking__c/recordTypes/Non_Live_inventory.recordType-meta.xml
<RecordType>
    <fullName>Non_Live_inventory</fullName>
    <active>false</active>
    <label>Non-Live inventory</label>
</RecordType>