force-app/main/default/objects/Booking__c/validationRules/Cancellation_Stage_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Stage_Cannot_Be_Changed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Stage__c), &quot;Cancellation&quot;),
    NOT(ISPICKVAL(Stage__c, &quot;Cancellation&quot;))
)</errorConditionFormula>
    <errorMessage>Cancellation Booking stage cannot be changed</errorMessage>
</ValidationRule>