force-app/main/default/objects/Booking__c/validationRules/Legal_Check_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Check_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Stage__c, &apos;Legal Finalization&apos;),
  Not(Demand_Letter__c),
  Not(Allotment_Letter__c),
  Not(Legal_Loan_Uploads_Successful__c),
  Not(Cost_Break_up_Sheet__c),
  Not(NOC__c),
  Not(TPA__c),
  Not(EFT__c),
  Not(Others__c)
)</errorConditionFormula>
    <errorMessage>Please fill all the mandatory checkboxes in Loan Details Section</errorMessage>
</ValidationRule>