force-app/main/default/objects/Booking__c/validationRules/Loan_Aggrement_Stage_change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Aggrement_Stage_change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Stage__c, &apos;Loan Approval&apos;),
    Not(Booking_Accepted_by_Customer__c),
      ISPICKVAL(CRM_Manager_Approval__c, &apos;Approved&apos;),
      ISPICKVAL(Finance_Approval__c, &apos;Accepted&apos;)
)</errorConditionFormula>
    <errorDisplayField>Booking_Accepted_by_Customer__c</errorDisplayField>
    <errorMessage>Please get approval and and fill the required fields</errorMessage>
</ValidationRule>