force-app/main/default/objects/Booking__c/validationRules/Progressive_Collections.validationRule-meta.xml
<ValidationRule>
    <fullName>Progressive_Collections</fullName>
    <active>false</active>
    <errorConditionFormula>If( Property_TypeFor__c == &apos;Villa&apos;,
			false
			,
			AND(
							ISPICKVAL(Stage__c, &apos;Progressive Collections&apos;),
							Not(First_Disbursement_Received__c)
			)		
		)</errorConditionFormula>
    <errorDisplayField>First_Disbursement_Received__c</errorDisplayField>
    <errorMessage>Please Fill Checkbox &apos;First Disbursement Received&apos;</errorMessage>
</ValidationRule>