force-app/main/default/objects/Booking__c/validationRules/Registration_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>If( Property_TypeFor__c == &apos;Villa&apos;,
			false
			,
			AND(
							ISPICKVAL(Stage__c, &apos;	Registration&apos;),
							Not(All_Payment_Cleared__c)
			)		
		)</errorConditionFormula>
    <errorDisplayField>All_Payment_Cleared__c</errorDisplayField>
    <errorMessage>Please Fill checkbox &apos;All Payment Cleared&apos;</errorMessage>
</ValidationRule>