force-app/main/default/objects/Booking__c/validationRules/Swapping_Stage_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Swapping_Stage_Cannot_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Stage__c), &quot;Swapping Completed&quot;),
NOT(ISPICKVAL(Stage__c, &quot;Swapping Completed&quot;))
)</errorConditionFormula>
    <errorMessage>Swapped booking stage cannot be changed</errorMessage>
</ValidationRule>