force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plot__c</columns>
    <columns>Stage__c</columns>
    <columns>First_Applicant_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quote__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>Sales_Person_Name__c</columns>
    <columns>Owner_NameFor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Ramesh V</value>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Whispering Petals</value>
    </filters>
    <label>Whispering Petals</label>
</ListView>